--- a/Apollo-react-webpack/package.json
+++ b/Apollo-react-webpack/package.json
@@ -28,6 +28,7 @@
     "apollo-client": "^2.5.1",
     "apollo-link-state": "^0.4.2",
     "axios": "^0.18.0",
+    "babel-plugin-wildcard": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "css-loader": "^2.1.1",
@@ -73,5 +74,8 @@
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
+  },
+  "babel": {
+    "plugins": ["wildcard"]
   }
 }
