--- a/Apollo-react-webpack/package.json
+++ b/Apollo-react-webpack/package.json
@@ -76,6 +76,8 @@
     "webpack-dev-server": "^3.3.1"
   },
   "babel": {
-    "plugins": ["wildcard"]
+    "plugins": [
+      "wildcard"
+    ]
   }
 }
