--- a/UI/package.json
+++ b/UI/package.json
@@ -35,7 +35,10 @@
     "history": "4.5.1",
     "material-ui": "0.17.0",
     "react": "15.4.2",
+    "react-addons-css-transition-group": "15.6.2",
     "react-apollo": "2.5.5",
+    "react-crossfade-image": "1.1.1",
+    "react-css-transition": "0.7.4",
     "react-dom": "15.4.2",
     "react-router": "3.0.2",
     "react-tap-event-plugin": "2.0.1",
